# excel-orm

./: .gitignore  README.md  main.py  pyproject.toml
src/: orm.py
src/excel_orm/: __init__.py  column.py  orm.py
tests/: conftest.py  test_columns.py  test_orm.py  test_orm_helpers.py
